syntax="proto3";
package dummy;
option java_package="com.proto.greet";
option java_multiple_files = true;

message GreetMessage {
    string first_name=1;
    string last_name = 2;
}

message GreetRequest {
    GreetMessage greetMessage =1;
}

message GreetResponse {
    string result = 1;
}

message GreetManyTimesRequest{
    GreetMessage greetMessage =1;
}

message GreetManyTimesResponse{
    string result = 1;
}


message LongGreetRequest{
    GreetMessage greetMessage =1;
}

message LongGreetResponse{
    string result = 1;
}

service GreetService{
    //unary
    rpc Greet(GreetRequest) returns(GreetResponse) {};
    
    //server streaming
    rpc GreetManyTimes(GreetManyTimesRequest) returns(stream GreetManyTimesResponse) {};
    
    //client streaming
    rpc LongGreet(stream LongGreetRequest) returns(LongGreetResponse){};
}

